<resources>
    <string name="app_name">RestaurantApp</string>

    <!--Main Activity-->
    <string name="welcomeMessage">Bienvenido a la aplicación de restaurantes</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrarse</string>

    <!--Register Activity-->
    <string name="registerTitle">Registre sus datos</string>
    <string name="emailUser">Email</string>
    <string name="nameUser">Nombre</string>
    <string name="passwordUser">Contraseña</string>

    <!--Login Activity-->
    <string name="loginTitle">Inicio de sesión</string>
    <string name="mailTitleLogin">Correo electrónico</string>

    <string name="forgotPassword">¿Olvidaste tu constraseña?</string>
    <string name="forgotPasswordText">Introduce tu correo:</string>
    <string name="resetPassword">Resetear Contraseña</string>
    <string name="rememberMe">Recuerdame</string>

    <!--Menu-->
    <string name="homeMenu">Inicio</string>
    <string name="subscriptionMenu">Suscripción</string>
    <string name="foodMenu">Comida</string>
    <string name="announcementMenu">Anuncios</string>

    <!--Profile Activity-->
    <string name="profile">Mi perfil</string>
    <string name="historyConsumes">Consumos</string>
    <string name="recommendations">Recomendaciones</string>

    <!--Profile Activity Buttons-->
    <string name="profileData">Mis Datos</string>
    <string name="profilePendingConsumes">Pagos Pendientes de consumo</string>
    <string name="profileMyPoints">Mis Puntos Acumulados</string>
    <string name="profileSettingsApp">Configuración de la app</string>
    <string name="profileSignOut">Cerrar sesión</string>

    <!--Profile Data -->
    <string name="profileName">Nombre:</string>
    <string name="profileEmail">Correo electrónico:</string>
    <string name="profilePassword">Contraseña:</string>
    <string name="profileAddress">Dirección:</string>
    <string name="profilePhone">Celular:</string>
    <string name="profileBirthdate">Fecha de nacimiento:</string>

    <!--Edit Profile Data -->
    <string name="editProfileData">Editar mis datos</string>
    <string name="btnUpdateProfileData">Actualizar datos</string>

    <!--Edit Profile Data Change Password-->
    <string name="editPasswordProfile">Editar mi contraseña</string>
    <string name="editOldPassword">Contraseña anterior:</string>
    <string name="editNewPassword">Nueva contraseña:</string>
    <string name="editNewPasswordConfirm">Confirmar contraseña:</string>
    <string name="buttonNewPassword">Actualizar contraseña</string>

    <!--Subscription Activity-->
    <string name="subscriptionTitle">Mi suscripción</string>
    <string name="subscriptionMessage">Aùn no cuentas con una membresía en la aplicación mòvil</string>
    <string name="subscriptionPoint1">Acceso a ganar puntos</string>
    <string name="subscriptionPoint2">Descuentos y promociones en negocios de comida</string>
    <string name="subscriptionPoint3">Historial de consumos</string>
    <string name="subscriptionPoint4">Pagos a través de la app</string>
    <string name="subscriptionPoint5">Recomendaciones según consumos anteriores</string>
    <string name="subscriptionObtain">Obtener</string>


    <!--New Subscription Activity-->
    <string name="newSubscriptionTitle">Nueva Suscripción</string>
    <string name="newSubscriptionMessage">Vamos a iniciar el registro de tu suscripción</string>

    <!--New Subscription Activity Step 2-->
    <string name="newSubscriptionMessageStepTwo">Revisa los datos de tu tarjeta antes de realizar el cobro correspondiente.</string>

    <!--New Subscription Activity Step 3-->
    <string name="subsStep3Message1">El monto de cada mes que se debitará de tu tarjeta registrada es de $sus 2.79</string>
    <string name="subsStep3MessagePrice">$sus 2.79</string>
    <string name="subsStep3Message2">Puedes cancelar tu membresía cuando lo desees.</string>
    <string name="subsStep3Message3">Tendrás acceso a tu suscripción hasta la fecha final de la vigencia.</string>
    <string name="subsCancel">Cancelar</string>
    <string name="subsConfirm">Confirmar</string>


    <!--New Subscription Activity Step 4-->
    <string name="subsStep4Complete">¡Suscripción completada!</string>
    <string name="subsStep4Message">¡Felicidades! El cobro realizado $sus 2.79 de la tarjeta 4579 ****fue exitoso, disfruta de tu membresía.</string>
    <string name="subsStep4Start">Comenzar</string>

    <!--Actual Subscription Activity-->
    <string name="actualSubsTittle">Mi suscripción</string>
    <string name="actualSubsMsg1">Cuentas con una suscripción desde 20/07/2022 hasta 20/08/2022</string>
    <string name="actualSubsMsg2">Último pago realizado en fecha 20/07/2022</string>
    <string name="actualSubsCancel">Cancelar suscripción</string>

    <!--Actual Subscription Cancel Subs Activity-->
    <string name="actualSubsCancelMsg">¿Estás seguro que deseas cancelar tu suscripción?</string>
    <string name="actualSubsConfirm">Confirmar</string>
    <string name="actualSubsNoCancel">Cancelar</string>

    <!--Actual Subscription Cancel Subs Confirm Activity-->
    <string name="actualSubsCancelConfirm1">Ya no se te cobrará tu suscripción de tu tarjeta registrada</string>
    <string name="actualSubsCancelConfirm2">Tu membresía termina la fecha 20/08/2022</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>