<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/profile"
        android:textSize="30sp"
        android:id="@+id/titleProfile"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_my_profile_default"
        android:layout_below="@+id/titleProfile"
        android:layout_centerInParent="true"
        android:id="@+id/profileImage"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/dark"
        android:text="@string/profileData"
        app:cornerRadius="8dp"
        app:strokeColor="@color/light"
        app:strokeWidth="2dp"
        android:layout_below="@+id/profileImage"
        android:id="@+id/btnProfileData"/>


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/dark"
        android:text="@string/profilePendingConsumes"
        app:cornerRadius="8dp"
        app:strokeColor="@color/light"
        app:strokeWidth="2dp"
        android:layout_below="@+id/btnProfileData"
        android:id="@+id/btnProfileConsumePending"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/dark"
        android:text="@string/profileMyPoints"
        app:cornerRadius="8dp"
        app:strokeColor="@color/light"
        app:strokeWidth="2dp"
        android:layout_below="@+id/btnProfileConsumePending"
        android:id="@+id/btnProfileMyPoints"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/dark"
        android:text="@string/profileSettingsApp"
        app:cornerRadius="8dp"
        app:strokeColor="@color/light"
        app:strokeWidth="2dp"
        android:layout_below="@+id/btnProfileMyPoints"
        android:id="@+id/btnProfileSettingApp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/dark"
        android:text="@string/profileSignOut"
        app:cornerRadius="8dp"
        app:strokeColor="@color/light"
        app:strokeWidth="2dp"
        android:layout_below="@+id/btnProfileSettingApp"
        android:id="@+id/btnProfileSignOut"/>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu"
        android:background="@color/custom"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"/>





</RelativeLayout>