<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualSubscriptionCancelSubsActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualSubsTittle"
        android:textSize="20sp"
        android:paddingVertical="20dp"
        android:id="@+id/actualSubscriptionTitle"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/actualSubscriptionTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:src="@drawable/ic_certificate"
        android:id="@+id/certificateImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backwithborder_text"
        android:layout_below="@+id/certificateImage"
        android:layout_marginHorizontal="30dp"
        android:paddingHorizontal="25dp"
        android:paddingVertical="35dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/actualSubsCancelMsg"
        android:id="@+id/actualSubsMsg"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:paddingHorizontal="60dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/actualSubsMsg"
        android:backgroundTint="@color/custom"
        android:text="@string/actualSubsConfirm"
        android:textColor="@color/dark"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:id="@+id/confirmSubsCancel"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:paddingHorizontal="60dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/confirmSubsCancel"
        android:backgroundTint="@color/custom"
        android:text="@string/actualSubsNoCancel"
        android:textColor="@color/dark"
        app:cornerRadius="20dp"
        android:textAllCaps="false"
        android:id="@+id/noCancelSubs"/>





    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu"
        android:background="@color/custom"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"/>


</RelativeLayout>